# gleipnir

./: .gitignore  LICENSE  README.md  build.ps1  pyproject.toml
gleipnir/: __main__.py  gleipnir.pyw
gleipnir/model/: model.py
gleipnir/ui/: dark_theme.qss  main.ui  presenter.py  view.py
gleipnir/ui/color_button/: view.py
gleipnir/ui/file_line_edit/: view.py
gleipnir/ui/plot_widget/: view.py
gleipnir/utils/: colormaps.py
style/: dark_theme.scss
